# ChangeLog for net-nds/openldap
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.96 2005/02/14 12:09:53 robbat2 Exp $

*openldap-2.2.23 (14 Feb 2005)

  14 Feb 2005; Robin H. Johnson <robbat2@gentoo.org>
  +openldap-2.2.23.ebuild:
  Add in 2.2.23 for testing. Still hardmasked.

  23 Jan 2005; Robin H. Johnson <robbat2@gentoo.org> openldap-2.1.26.ebuild,
  openldap-2.1.27-r1.ebuild, openldap-2.1.27.ebuild,
  openldap-2.1.30-r1.ebuild, openldap-2.1.30-r2.ebuild,
  openldap-2.1.30-r3.ebuild, openldap-2.1.30-r4.ebuild,
  openldap-2.1.30.ebuild, openldap-2.2.14.ebuild, openldap-2.2.19.ebuild:
  Fix bug #79216.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  06 Dec 2004; Robin H. Johnson <robbat2@gentoo.org>
  openldap-2.1.30-r3.ebuild, openldap-2.1.30-r4.ebuild,
  openldap-2.2.14.ebuild, openldap-2.2.19.ebuild:
  More docs for 2.2 upgrade, fix slight glitch in slapd.conf.

*openldap-2.1.30-r4 (01 Dec 2004)

  01 Dec 2004; Robin H. Johnson <robbat2@gentoo.org>
  +files/openldap-2.1.30-tls-activedirectory-hang-fix.patch,
  files/2.0/slapd, +openldap-2.1.30-r4.ebuild:
  Fix bugs #67080 (2.1.30-r4) and #71268 (init-script).

*openldap-2.2.19 (01 Dec 2004)

  01 Dec 2004; Robin H. Johnson <robbat2@gentoo.org>
  +openldap-2.2.19.ebuild:
  Latest 2.2 ebuild, for testing only. See ebuild for upgrade notes.

  07 Nov 2004; Joshua Kinard <kumba@gentoo.org> openldap-2.1.30-r2.ebuild:
  Marked stable on mips.

  05 Oct 2004; Guy Martin <gmsoft@gentoo.org> openldap-2.1.30-r2.ebuild:
  Stable on hppa.

  03 Oct 2004; Bryan Østergaard <kloeri@gentoo.org> openldap-2.1.30-r2.ebuild:
  Stable on alpha.

*openldap-2.1.30-r2 (25 Sep 2004)

  25 Sep 2004; Jason Wever <weeve@gentoo.org> openldap-2.1.30-r2.ebuild:
  Stable on sparc.

  22 Aug 2004; Jason Wever <weeve@gentoo.org> openldap-2.1.30-r1.ebuild:
  Stable on sparc.
