@@ -1,6 +1,13 @@
 # ChangeLog for net-nds/openldap
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.96 2005/02/14 12:09:53 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.97 2005/02/14 13:32:30 robbat2 Exp $
+
+*openldap-2.2.23-r1 (14 Feb 2005)
+
+  14 Feb 2005; Robin H. Johnson <robbat2@gentoo.org>
+  +openldap-2.2.23-r1.ebuild:
+  Special version for seemant ;-). Makes some of the extra stuff as modules,
+  and builds some of contrib.
 
 *openldap-2.2.23 (14 Feb 2005)
 
